feat: added GET for card packs
