# docs/swagger.json
@@ -4,7 +4,7 @@
         "description": "A FOSS Cards Against Humanity server written in Go",
         "title": "Cards Against Humanity API",
         "contact": {
-            "name": "Danny Piper",
+            "name": "Danny Piper (djpiper28)",
             "url": "https://github.com/djpiper28/cards-against-humanity",
             "email": "djpiper28@gmail.com"
         },
@@ -17,7 +17,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/create": {
+        "/games/create": {
             "post": {
                 "description": "Creates a new game for you to connect to via websocket afterwards",
                 "consumes": [
@@ -51,7 +51,7 @@
                 }
             }
         },
-        "/notFull": {
+        "/games/notFull": {
             "get": {
                 "description": "Returns a list of the games",
                 "consumes": [
@@ -72,6 +72,29 @@
                             "items": {
                                 "$ref": "#/definitions/gameLogic.GameInfo"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/res/packs": {
+            "get": {
+                "description": "Gets all of the card packs as a map",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resources"
+                ],
+                "summary": "Gets all of the resource cards packs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.getPacksResp"
                         }
                     }
                 }
@@ -157,11 +180,12 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "Bearer token": {
-            "type": "basic"
+        },
+        "main.getPacksResp": {
+            "type": "object",
+            "additionalProperties": {
+                "$ref": "#/definitions/gameLogic.CardPack"
+            }
         }
     }
 }
